# fred-mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/fred_mcp/: _types.py  config.py  credentials.py  main.py
src/fred_mcp/categories/: tools.py
src/fred_mcp/common/: errors.py  tools.py  types.py
src/fred_mcp/releases/: tools.py
src/fred_mcp/series/: mcp.py  tools.py
src/fred_mcp/sources/: tools.py
src/fred_mcp/tags/: tools.py
tests/: test_credentials.py  test_modules.py  test_tools.py
