[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fred-mcp"
version = "1.0.1"
authors = [
    { name = "Zachary Spar", email = "zachspar@gmail.com" },
]
description = "A fully-featured FRED MCP server."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.3,<4",
    "fred-py-api~=1.2.1",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/zachspar/fred-mcp"
"Bug Tracker" = "https://github.com/zachspar/fred-mcp/issues"

[project.scripts]
fred-mcp = "fred_mcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
target-version = "py310"
